--- a/front-end/src/styles.css
+++ b/front-end/src/styles.css
@@ -1,1 +1,141 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
+@import "~@fortawesome/fontawesome-free/css/all.css";
+
+@font-face {
+    font-family: 'Poppins';
+    src: url('assets/fonts/Poppins/Poppins-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+
+@font-face {
+    font-family: 'Poppins-Bold';
+    src: url('assets/fonts/Poppins/Poppins-Bold.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+
+
+
+:root {
+    --main-color : black;
+    --box-color :   #F6F6F6;
+    --breadcrumb--color : #999999;
+    --text-color: #525252;
+
+    
+}
+
+* { 
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body{
+    font-family: Poppins , "sans-serif" ;
+}
+
+.header{
+    color:var(--main-color);
+    font-size: 0.83em;
+    font-weight:700;
+    line-height: 25px;
+    text-decoration: none;
+    letter-spacing: 0.1rem;
+    text-transform: uppercase ;
+    position: relative;
+    font-family: Poppins-Bold;
+
+}
+
+
+.navLink::before{
+    content: "";
+    position: absolute;
+    height: 2px;
+    /* background-color: transparent; */
+    width: 0%;
+    bottom: -3px;
+    animation: none;
+    background-color: black;
+}
+
+
+
+.navLink:hover::before{
+    animation-name: slide-in;
+    animation-duration: 0.6s;
+    animation-fill-mode: forwards;
+}
+
+
+
+.navLink:not(:hover)::before{
+    animation-name: slide-out;
+    animation-duration: 0.8s;
+    animation-fill-mode: forwards;
+}
+
+
+@keyframes slide-in {
+    0%{
+        width: 0%;
+    }
+    100%{
+        width:100% ;
+    }
+}
+@keyframes slide-out {  
+    from{
+        width: 100%;
+    }
+    to{
+        width: 0%;
+    }
+
+}
+.search{
+    background-color: var(--box-color);
+    color : #a5a5a5;
+    border:none;
+    outline: 0cm;
+    height: 3rem;
+    padding-left: 50px;
+}
+
+.pointer{
+    cursor: pointer;
+}
+
+.navicon{
+    font-size : 1.5rem;
+    transition: transform 0.3s ease, opacity 0.3s ease;
+
+}
+
+.navicon:hover{
+    transform: scale(1.1);
+    opacity: 0.9;  
+}
+
+.text{
+    font-size: 0.8em !important;
+    color: var(--text-color);
+    text-decoration: none;
+    font-weight: 400;
+}
+
+.footerLink:hover{
+    border-bottom: #525252 1px solid;
+}
+
+
+.mainLogo{
+    height: 100px;
+}
+
