Product back-end : version 1

--- a/front-end/src/app/product/product-view-right/product-view-right.component.html
+++ b/front-end/src/app/product/product-view-right/product-view-right.component.html
@@ -1,1 +1,15 @@
-<p>product-view-right works!</p>
+<div class="card" style="width: 18rem;">
+    <div class="card-body">
+      <h5 class="card-title">brand</h5>
+      <h6 class="card-subtitle mb-2 text-muted">product name</h6>
+      <p class="card-text">Vendor</p>
+      <p class="card-text">Availability</p>
+      <p class="card-text">Product Type</p>
+      <p class="card-text">Description</p>
+      <h6 class="card-subtitle mb-2 text-muted">$Price</h6>
+      <p class="card-text">Scent/size (or other)</p>
+      <p class="card-text">Quantity</p>
+      <p class="card-text">Subtotal</p>
+      <a href="#" class="btn btn-primary">ADD TO CART</a>
+    </div>
+  </div>
