added struct for the admin

--- a/front-end/src/app/shared/navbar/navbar.component.html
+++ b/front-end/src/app/shared/navbar/navbar.component.html
@@ -1,4 +1,5 @@
-<nav  class="bg-white d-flex flex-column  container-fluid w-100 position-relative  justify-content-center">
+<nav *ngIf="!isLoggedIn || isUser">
+<div  class="bg-white d-flex flex-column  container-fluid w-100 position-relative  justify-content-center">
     <div class="row p-3 fix justify-content-center">
         <div class="col d-flex flex-row gap-5   ">
             <img class="mainLogo" src="/assets/images/logo.png" alt="logo"/>
@@ -18,7 +19,7 @@
     </div>
 
 
-</nav>
+</div>
 <div #stickyNav  class="fade-in row p-3 p-md-4  flex-row justify-content-center  ">
     <ul class="nav gap-4 justify-content-center ">
         <li *ngFor="let link of navLinks">
@@ -26,3 +27,4 @@
         </li>
     </ul>
 </div>
+</nav>
