--- a/front-end/src/app/shared/footer/footer.component.html
+++ b/front-end/src/app/shared/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="container-fluid"> 
+<footer *ngIf="!isLoggedIn || isUser" class="container-fluid"> 
     <div class="row p-3 first py-5">
 
             <div *ngFor="let link of footerLinks" class="col-md-4 col col-lg-2 ">
@@ -63,7 +63,7 @@
             Copyright © {{anio}} <div class="mt-1 ">All rights Reserved </div> 
         </div>
         <div class=" d-flex flex-wrap gap-1 ">
-            <div *ngFor="w-50 let card of footerCards" >
+            <div *ngFor="let card of footerCards" >
                 <div >
                     <img class="cardLogo" [src]="'assets/cards/' + card" [alt]="card">
                 </div>
