--- a/front-end/src/app/products/product/product/product.component.html
+++ b/front-end/src/app/products/product/product/product.component.html
@@ -1,2 +1,49 @@
-<app-product-view-left/>
-<app-product-view-right [product]="product"/>
+    <!-- Product section-->
+    <section class="py-5 bgProduct">
+        <div class="container px-4 px-lg-5 my-5">
+            <div class="row gx-4 gx-lg-5 align-items-center">
+                <div class="col-md-6"><app-product-view-left [product]="product"/></div>
+                <div class="col-md-6">
+                    <app-product-view-right [product]="product"/>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Related items section-->
+    <section class="py-5 bg-light">
+        <div class="container px-4 px-lg-5 mt-5">
+            <h2 class="fw-bolder mb-4">Related products</h2>
+            
+            <!-- Si la liste est vide -->
+            <div *ngIf="!relatedProducts?.length" class="text-center">
+                <p class="text-muted">No related products found.</p>
+            </div>
+            
+            <!-- Liste des produits associés -->
+            <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center" *ngIf="relatedProducts?.length">
+                <div class="col mb-5" *ngFor="let relatedProduct of relatedProducts">
+                    <div class="card h-100">
+                        <div class="card h-100 shadow">
+                            <!-- Product image-->
+                            <img class="card-img-top image" [src]="relatedProduct.images[0].url" alt="..." />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product brand-->
+                                    <h5 class="fw-bolder">{{relatedProduct.brand}}</h5>
+                                    <!-- Product name-->
+                                    <small  class="fs-5 product-name"
+                                            [routerLink]="['/product', relatedProduct.id]" 
+                                            style="cursor: pointer;">
+                                        {{relatedProduct.name}}
+                                    </small>
+                                    <!-- Product price-->
+                                    <p class="fw-bolder" [ngStyle]="{ 'color': '#c8b59e' }">${{relatedProduct.price}}</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
