--- a/front-end/src/app/products/product/product-view-right/product-view-right.component.html
+++ b/front-end/src/app/products/product/product-view-right/product-view-right.component.html
@@ -1,25 +1,33 @@
-<div class="card" style="width: 18rem;">
-    <div class="card-body">
-      <h5 class="card-title">{{product?.brand}}</h5>
-      <h6 class="card-subtitle mb-2 text-muted">{{product?.name}}</h6>
-      <p class="card-text">Vendor: {{product?.brand}}</p>
-      <p class="card-text">Availability: {{product?.availability}}</p>
-      <p class="card-text">Product Type: {{product?.type}}</p>
-      <p class="card-text">Description: {{product?.description}}</p>
-      <h6 class="card-subtitle mb-2 text-muted">${{product?.price}}</h6>
-      <p class="card-text">Scent/size (or other)</p>
-      <div>
-        <label for="quantity">Quantity:</label>
-        <input
-          type="number"
-          id="quantity"
-          [value]="quantity"
-          min="1"
-          (change)="updateQuantity($event)"
-        />
-      </div>
-  
-      <p class="card-text"><strong>Subtotal:</strong> $ {{ subtotal }}</p>
-      <a href="#" class="btn btn-primary">ADD TO CART</a>
-    </div>
-  </div>
+<h1 class="display-5 fw-bolder">{{product?.name}}</h1>
+
+<figcaption class="blockquote-footer">
+  {{product?.brand}}
+</figcaption>
+<div class="p-3 mb-2 bg-white text-dark bg-opacity-75">
+<p class="fw-light information"><cite class="fw-normal">Vendor :</cite> &nbsp;{{product?.brand}}</p>
+<div class="card-body d-flex flex-row information">
+  <p class="fw-light information"><cite class="fw-normal">Availability :&nbsp;&nbsp;</cite></p>
+  <p 
+    [ngClass]="{
+      'text-danger': !product?.availability,
+      'text-success': product?.availability
+      }"
+      class="fw-light information">
+        {{product?.availability ? 'In Stock' : 'Out of Stock'}}
+  </p>
+</div>
+<p class="fw-light "><cite class="fw-normal">Type :  </cite>&nbsp;{{product?.type}}</p>
+
+<p class="fw-light ">{{product?.description}}</p>
+</div>
+<div class="fs-5 mb-5 fw-bold" [ngStyle]="{ 'color': '#c8b59e' }">
+  <span>${{product?.price}}</span>
+</div>
+
+<div class="d-flex">
+  <input class="form-control text-center me-3" id="inputQuantity" type="num" value="1" style="max-width: 3rem" />
+  <button class="btn btn-outline-dark flex-shrink-0" type="button">
+    <i class="bi-cart-fill me-1"></i>
+      Add to cart
+    </button>
+</div>
