--- a/front-end/src/app/products/products.component.html
+++ b/front-end/src/app/products/products.component.html
@@ -1,10 +1,27 @@
-<div class="col-md-4 mb-4" *ngFor="let product of products">
-    <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-        <h5 class="card-title">{{product.brand}}</h5>
-        <p class="card-text">{{product.name}}</p>
-        <a class="btn btn-primary" [routerLink]="['/product', product.id]">Go TO PRODUCT</a>
+<section class="py-5">
+    <div class="container px-4 px-lg-5 mt-5">
+        <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+            <div class="col mb-5" *ngFor="let product of products">
+                <div class="card h-100 shadow">
+                    <!-- Product image-->
+                    <img class="card-img-top image" [src]="product.images[0].url" alt="..." />
+                    <!-- Product details-->
+                    <div class="card-body p-4">
+                        <div class="text-center">
+                            <!-- Product brand-->
+                            <h5 class="fw-bolder">{{product.brand}}</h5>
+                            <!-- Product name-->
+                            <small  class="fs-5 product-name"
+                                    [routerLink]="['/product', product.id]" 
+                                    style="cursor: pointer;">
+                                {{product.name}}
+                            </small>
+                            <!-- Product price-->
+                            <p class="fw-bolder" [ngStyle]="{ 'color': '#c8b59e' }">${{product.price}}</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-</div>    
+</section>
