--- a/front-end/src/app/admin/logging/logging.component.html
+++ b/front-end/src/app/admin/logging/logging.component.html
@@ -1,1 +1,25 @@
-<p>logging works!</p>
+<div class="logging-page">
+    <div class="logging-form">
+        <h2>Login</h2>
+
+        <form (ngSubmit)="onLogin()">
+            <div class="form-group">
+                <label for="username">Username</label>
+                <input id="username" [(ngModel)]="username" name="username" type="text" required
+                    placeholder="Enter your username" />
+            </div>
+
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input id="password" [(ngModel)]="password" name="password" type="password" required
+                    placeholder="Enter your password" />
+            </div>
+
+            <button type="submit">Login</button>
+        </form>
+
+        <div *ngIf="errorMessage" class="error-message">
+            <p>{{ errorMessage }}</p>
+        </div>
+    </div>
+</div>
