--- a/front-end/src/app/admin/logging/logging.component.html
+++ b/front-end/src/app/admin/logging/logging.component.html
@@ -21,5 +21,8 @@
         <div *ngIf="errorMessage" class="error-message">
             <p>{{ errorMessage }}</p>
         </div>
+        <div class="register-link">
+            <p>Don't have an account? <a routerLink="/register">Register</a></p>
+        </div>
     </div>
 </div>
