fixed backend and added the user table

--- a/front-end/src/app/admin/admin.component.html
+++ b/front-end/src/app/admin/admin.component.html
@@ -16,6 +16,7 @@
     </aside>
     <div class="main">
         <app-navbar-admin [title]="panel" ></app-navbar-admin>
+        <app-modal></app-modal>
         <main class="content">
             <router-outlet></router-outlet>
         </main>
