--- a/front-end/src/app/shared/table/table.component.css
+++ b/front-end/src/app/shared/table/table.component.css
@@ -40,3 +40,13 @@ i[class*="fa-bars"]{
     text-align: left;
     color: #232323;
 }
+
+.title{
+    font-size:1em;
+    font-weight: 500;
+    letter-spacing: 0.05em;
+    line-height: 22px;
+    text-transform: capitalize;
+    text-align: left;
+    color: #232323;
+}
