--- a/front-end/src/app/admin/logging/logging.component.html
+++ b/front-end/src/app/admin/logging/logging.component.html
@@ -4,9 +4,9 @@
 
         <form (ngSubmit)="onLogin()">
             <div class="form-group">
-                <label for="username">Username</label>
-                <input id="username" [(ngModel)]="username" name="username" type="text" required
-                    placeholder="Enter your username" />
+                <label for="email">Email</label>
+                <input id="email" [(ngModel)]="email" name="email" type="text" required
+                    placeholder="Enter your email" />
             </div>
 
             <div class="form-group">
