--- a/front-end/src/app/admin/admin.component.css
+++ b/front-end/src/app/admin/admin.component.css
@@ -5,10 +5,12 @@
 }
 
 .sidebar {
-    width: 250px;
+    width: 90px;
     background-color: #f4f4f4;
     padding: 15px;
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+    height:100vh;
+    position:fixed;
 }
 
 .sidebar ul {
@@ -31,6 +33,7 @@
 }
 
 .main{
+    margin-left:90px;
     display: flex;
     flex-direction: column;
     width: 100vw;
@@ -38,7 +41,7 @@
 }
 
 .logo{
-    height: 100px;
+    height: 70px;
     margin: 0 auto;
     margin-bottom: 50px;
 }
