--- a/front-end/src/app/admin/admin.component.html
+++ b/front-end/src/app/admin/admin.component.html
@@ -1,7 +1,7 @@
 <div class="admin-layout">
     
     <aside class="sidebar">
-        <img  [src]="'assets/images/logo.png'" class="logo " alt="logo" class="logo">
+        <img  [src]="'assets/images/logo.png'" alt="logo" class="logo">
         <ul class="pt-4 ">
 
             <li *ngFor="let item of items" >
