--- a/front-end/src/app/shared/table/table.component.html
+++ b/front-end/src/app/shared/table/table.component.html
@@ -4,14 +4,14 @@
 <section *ngIf="isFilterable" class="container">
     <app-filter-section></app-filter-section>   
 </section>
-<section class="" *ngIf="grid === 'lines' && requireCols" class=" d-flex w-100 container-fluid justify-content-between " >
-    <div *ngFor="let item of columns" class="mb-3 flex-grow-1 text-center py-4 mt-3 ">
+<section class="" *ngIf="grid === 'lines' && requireCols" class=" d-flex w-100 container-fluid justify-content-around " >
+    <div *ngFor="let item of columns" class="mb-3 flex-grow-1 text-center py-4 mt-3 text-info-emphasis ">
        <span class="title">
             {{item.name}}
        </span> 
     </div>
 </section> 
-<section class="d-flex container-fluid flex-wrap justify-content-between w-100">
+<section class="d-flex container-fluid flex-wrap w-100">
     <div *ngFor="let item of Tabledata" [ngClass]="gridClass" class="mb-3 " >
         <ng-container *ngIf="isCustomizable && grid === 'lines'; else cardView">
             <ng-container *ngTemplateOutlet="rowTemplate; context: { $implicit: item }"></ng-container>
